# client

./: .gitignore  CMakeLists.txt  README.md  build-all.sh  build.sh  change-compiler.sh  check-env.sh  client.c  copy-template.sh  files.txt  generate-cmakelists.sh  supported_c_compilers.txt  supported_cxx_compilers.txt
.flags/clang/: address_sanitizer_flags.txt  cfi_sanitizer_flags.txt  dataflow_sanitizer_flags.txt  debug_flags.txt  hwaddress_sanitizer_flags.txt  instrumentation_flags.txt  memory_sanitizer_flags.txt  optimize_flags.txt  pointer_overflow_sanitizer_flags.txt  thread_sanitizer_flags_flags.txt  undefined_sanitizer_flags.txt  warning_flags.txt
.flags/gcc/: address_sanitizer_flags.txt  analyzer_flags.txt  debug_flags.txt  instrumentation_flags.txt  optimize_flags.txt  undefined_sanitizer_flags.txt  warning_flags.txt
include/: arguments.h  binary.h  display.h  login.h  messages.h  socket.h  utils.h
src/: arguments.c  binary.c  display.c  login.c  main.c  messages.c  server.c  socket.c  utils.c
